# depth_estimation

./: .pre-commit-config.yaml  Dockerfile  README.md  demo.py  demo_app.py  depth_estimation.py  pyproject.toml  requirements.txt
.circleci/: config.yml
depth_estimation/: __init__.py
hooks/: pre-commit
saved_model_lite_hr_depth_k_t_encoder_depth_192x640/openvino/FP16/: lite_hr_depth_k_t_encoder_depth_192x640.mapping  lite_hr_depth_k_t_encoder_depth_192x640.xml
saved_model_lite_hr_depth_k_t_encoder_depth_192x640/openvino/FP32/: lite_hr_depth_k_t_encoder_depth_192x640.mapping  lite_hr_depth_k_t_encoder_depth_192x640.xml
saved_model_lite_hr_depth_k_t_encoder_depth_192x640/tensorrt_saved_model_float16/assets/: trt-serialized-engine.TRTEngineOp_1_11  trt-serialized-engine.TRTEngineOp_1_12  trt-serialized-engine.TRTEngineOp_1_14  trt-serialized-engine.TRTEngineOp_1_15  trt-serialized-engine.TRTEngineOp_1_5  trt-serialized-engine.TRTEngineOp_1_6  trt-serialized-engine.TRTEngineOp_1_7  trt-serialized-engine.TRTEngineOp_1_8  trt-serialized-engine.TRTEngineOp_1_9
saved_model_lite_hr_depth_k_t_encoder_depth_192x640/tensorrt_saved_model_float16/variables/: variables.index
saved_model_lite_hr_depth_k_t_encoder_depth_192x640/tensorrt_saved_model_float32/variables/: variables.index
saved_model_lite_hr_depth_k_t_encoder_depth_192x640/tfjs_model_float16/: model.json
saved_model_lite_hr_depth_k_t_encoder_depth_192x640/tfjs_model_float32/: model.json
saved_model_lite_hr_depth_k_t_encoder_depth_192x640/variables/: variables.index
tests/: test_depth_estimation.py
(+9 files in other folders)
